fix jasperreport